Remove error box z-index, it was preventing clicking on nearby elements.

--- a/indigo_app/static/stylesheets/app.scss
+++ b/indigo_app/static/stylesheets/app.scss
@@ -123,7 +123,6 @@ html, body {
   top: 10px;
   left: 0px;
   right: 0px;
-  z-index: 1000;
   
   .alert {
     width: 600px;
